--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="main"
-            type="com.example.sopt_seminar.ui.HomeFragment" />
+            type="com.example.sopt_seminar.ui.ProfileFragment" />
 
         <variable
             name="fragmentManager"
@@ -34,7 +34,7 @@
             android:id="@+id/home_fragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context="com.example.sopt_seminar.ui.HomeFragment">
+            tools:context="com.example.sopt_seminar.ui.ProfileFragment">
 
             <ImageView
                 android:id="@+id/imageView"
