--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,8 +22,8 @@
             android:id="@+id/action_sign_in_fragment_to_sign_up_fragment"
             app:destination="@id/sign_up_fragment" />
         <action
-            android:id="@+id/action_sign_in_fragment_to_home_fragment"
-            app:destination="@id/home_fragment" />
+            android:id="@+id/action_sign_in_fragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
     </fragment>
 
     <fragment
@@ -48,25 +48,6 @@
     </fragment>
 
     <fragment
-        android:id="@+id/home_fragment"
-        android:name="com.example.sopt_seminar.ui.HomeFragment"
-        android:label="home_activty"
-        tools:layout="@layout/home_fragment">
-        <action
-            android:id="@+id/action_home_fragment_to_detailFragment"
-            app:destination="@id/detailFragment">
-            <argument
-                android:name="followerName"
-                android:defaultValue=""
-                app:argType="string" />
-            <argument
-                android:name="followerDes"
-                android:defaultValue=""
-                app:argType="string" />
-        </action>
-    </fragment>
-
-    <fragment
         android:id="@+id/detailFragment"
         android:name="com.example.sopt_seminar.ui.DetailFragment"
         android:label="DetailFragment"
@@ -79,5 +60,23 @@
             android:name="followerDes"
             android:defaultValue=""
             app:argType="string" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.example.sopt_seminar.ui.MainFragment"
+        android:label="MainFragment">
+        <action
+            android:id="@+id/action_mainFragment_to_detailFragment"
+            app:destination="@id/detailFragment">
+            <argument
+                android:name="followerName"
+                android:defaultValue=""
+                app:argType="string" />
+            <argument
+                android:name="followerDes"
+                android:defaultValue=""
+                app:argType="string" />
+        </action>
     </fragment>
 </navigation>
