--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -44,7 +44,9 @@
             android:layout_marginTop="60dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home_tv" />
+            app:layout_constraintTop_toBottomOf="@+id/home_tv"
+            app:tabIndicatorColor="@color/black"
+            app:tabSelectedTextColor="@color/bot_nav_selector" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/home_vp"
