--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -48,14 +48,19 @@
             app:tabIndicatorColor="@color/black"
             app:tabSelectedTextColor="@color/bot_nav_selector" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/home_vp"
+        <com.example.sopt_seminar.util.NestedScrollableHost
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/home_tl" />
+            app:layout_constraintTop_toBottomOf="@+id/home_tl">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/home_vp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </com.example.sopt_seminar.util.NestedScrollableHost>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
