--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -10,6 +11,38 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.camera.CameraFragment">
+
+        <ImageView
+            android:id="@+id/camera_img"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_marginTop="124dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/camera_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="56dp"
+            android:text="@string/camera_tv"
+            android:textAppearance="@style/common_text"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/camera_img"
+            app:layout_constraintStart_toStartOf="@+id/camera_img"
+            app:layout_constraintTop_toBottomOf="@+id/camera_img" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/camera_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="44dp"
+            android:text="@string/camera_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/camera_tv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
