--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -83,12 +83,11 @@
                 android:id="@+id/sign_in_login_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="44dp"
                 android:onClick="@{()->vm.checkInput()}"
                 android:text="@string/login_text"
                 app:layout_constraintEnd_toEndOf="@+id/sign_in_password_et"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_password_et"
-                app:layout_constraintTop_toBottomOf="@+id/sign_in_password_et" />
+                app:layout_constraintTop_toBottomOf="@+id/auto_login_cb" />
 
             <Button
                 android:id="@+id/sign_in_clear_btn"
@@ -99,6 +98,16 @@
                 app:layout_constraintEnd_toEndOf="@+id/sign_in_login_btn"
                 app:layout_constraintStart_toStartOf="@+id/sign_in_login_btn"
                 app:layout_constraintTop_toBottomOf="@+id/sign_in_login_btn" />
+
+            <CheckBox
+                android:id="@+id/auto_login_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:checked="@={vm.isAuto}"
+                android:text="@string/sign_in_auto_login"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/sign_in_password_et" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
