--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -3,49 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/sign_in_fragment">
-
-    <fragment
-        android:id="@+id/sign_in_fragment"
-        android:name="com.example.sopt_seminar.ui.signin.SignInFragment"
-        android:label="sign_in_activity"
-        tools:layout="@layout/sign_in_fragment">
-        <argument
-            android:name="userId"
-            android:defaultValue=""
-            app:argType="string" />
-        <argument
-            android:name="userPassword"
-            android:defaultValue=""
-            app:argType="string" />
-        <action
-            android:id="@+id/action_sign_in_fragment_to_sign_up_fragment"
-            app:destination="@id/sign_up_fragment" />
-        <action
-            android:id="@+id/action_sign_in_fragment_to_mainFragment"
-            app:destination="@id/main_fragment" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/sign_up_fragment"
-        android:name="com.example.sopt_seminar.ui.signup.SignUpFragment"
-        android:label="sign_up_activity"
-        tools:layout="@layout/sign_up_fragment">
-        <action
-            android:id="@+id/action_sign_up_fragment_to_sign_in_fragment"
-            app:destination="@id/sign_in_fragment"
-            app:popUpTo="@id/sign_in_fragment"
-            app:popUpToInclusive="true">
-            <argument
-                android:name="userId"
-                android:defaultValue=""
-                app:argType="string" />
-            <argument
-                android:name="userPassword"
-                android:defaultValue=""
-                app:argType="string" />
-        </action>
-    </fragment>
+    app:startDestination="@id/main_fragment">
 
     <fragment
         android:id="@+id/detail_fragment"
@@ -69,7 +27,8 @@
     <fragment
         android:id="@+id/main_fragment"
         android:name="com.example.sopt_seminar.ui.MainFragment"
-        android:label="MainFragment">
+        android:label="MainFragment"
+        tools:layout="@layout/fragment_main">
         <action
             android:id="@+id/action_mainFragment_to_detailFragment"
             app:destination="@id/detail_fragment">
@@ -90,6 +49,7 @@
             android:id="@+id/action_main_fragment_to_settingFragment"
             app:destination="@id/settingFragment" />
     </fragment>
+
     <fragment
         android:id="@+id/settingFragment"
         android:name="com.example.sopt_seminar.ui.setting.SettingFragment"
